// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Component Rendering Snapshots renders button tag variants correctly: button-with-children 1`] = `
<div>
  <button
    class="sc-Qotzb cMZrNL"
  >
    <span>
      Custom Content
    </span>
  </button>
</div>
`;

exports[`Tag Component Rendering Snapshots renders button tag variants correctly: default-button 1`] = `
<div>
  <button
    class="sc-Qotzb cMZrNL"
  >
    Button Tag
  </button>
</div>
`;

exports[`Tag Component Rendering Snapshots renders button tag variants correctly: disabled-button 1`] = `
<div>
  <button
    class="sc-Qotzb WeeEn"
    disabled=""
  >
    Disabled Button
  </button>
</div>
`;

exports[`Tag Component Rendering Snapshots renders button tag variants correctly: selected-button 1`] = `
<div>
  <button
    class="sc-Qotzb fqEkNb"
  >
    Selected Button
  </button>
</div>
`;

exports[`Tag Component Rendering Snapshots renders link tag variants correctly: default-link 1`] = `
<div>
  <div
    class="sc-fYsHOw gJPlhc"
  >
    <a
      data-testid="link"
      href="/test"
    >
      Link Tag
    </a>
  </div>
</div>
`;

exports[`Tag Component Rendering Snapshots renders link tag variants correctly: disabled-link 1`] = `
<div>
  <div
    class="sc-fYsHOw EUICk"
  >
    <a
      data-testid="link"
      href="/test"
    >
      Disabled Link
    </a>
  </div>
</div>
`;

exports[`Tag Component Rendering Snapshots renders link tag variants correctly: link-with-target 1`] = `
<div>
  <div
    class="sc-fYsHOw gJPlhc"
  >
    <a
      data-testid="link"
      href="https://example.com"
    >
      External Link
    </a>
  </div>
</div>
`;

exports[`Tag Component Rendering Snapshots renders link tag variants correctly: selected-link 1`] = `
<div>
  <div
    class="sc-fYsHOw ginhKY"
  >
    <a
      data-testid="link"
      href="/test"
    >
      Selected Link
    </a>
  </div>
</div>
`;
